--- a/RPG-TCC-master/inicialcss.css
+++ b/RPG-TCC-master/inicialcss.css
@@ -1,19 +1,75 @@
- {
-  	background-image: url('imagens/bg.jpg');
- 	background-repeat: no-repeat;
- 	background-size: cover;
-}
+/*  INICIAL APRESENTAÇÃO  */
 
-.comoJogarBody {
+* {margin: 0; padding: 0;
+    }
+
+    body {font-size: 16px; font-family: 'Raleway', sans-serif;
+    }
+
+    h1 {font-size: 4rem;
+    }
+
+    section {display: table; width: 100%;
+    }
+
+    .height-80 {background: #8E44AD; height: 80vh;
+    }
+
+    .height-50 {background: #FFFFFF; height: 100vh; width: 99vw;
+    }
+
+    .height-100 {background: url(imagens/bg2.jpg); height: 100vh; width: 99vw;
+    }
+
+    .outradiv {color: #FFFFFF; vertical-align: middle; padding: 8%; font-size: 30px;
+    }
+
+    @media (max-width: 767px) {
+        h1 {font-size: 2rem;
+        }
+
+        p {font-size: 1rem; font-weight: 300;
+        }
+    }
+
+
+/*  FOOTER CREDITOS  */
+
+
+	.divCreditos {padding: 10px; 
+	}
+
+	.texto_centro {vertical-align: middle; color: black;
+	}
+
+
+/*  O QUE É RPG  */
+
+
+	.jumbotron-margin {
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 5%;
+	}
+
+	.fonte-texto {
+		font-family: 'Satisfy', cursive; 
+		font-size: 1.5em;
+	}
+
+	.fonte-titulo {
+		font-family: 'Yeon Sung', cursive;
+	}
+
+	.fonte-subtitulo {
+		font-family: 'Permanent Marker', cursive;
+	}
+
+	.imagemdice {
+		width: 560px;
+		height: 300px;
+		border-radius: 35px; 
+
+	}
+
 	
-}
-
-
-.divCreditos { 
-	padding: 10px; 
-}
-
-.texto_centro {
-	text-align: center;
-	color: white;
-}
